--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,9 @@ dist.jar=${dist.dir}/TrackObject.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.javacpp.jar=../../../../../javacv-bin/javacpp.jar
-file.reference.javacv-windows-x86_64.jar=../../../../../javacv-bin/javacv-windows-x86_64.jar
-file.reference.javacv.jar=../../../../../javacv-bin/javacv.jar
+file.reference.javacpp.jar=lib/javacpp.jar
+file.reference.javacv-windows-x86_64.jar=lib/javacv-windows-x86_64.jar
+file.reference.javacv.jar=lib/javacv.jar
 includes=**
 jar.compress=false
 javac.classpath=\
